# dotunnel

./: .editorconfig  .gitattributes  .gitignore  .yarnrc.yml  Cargo.toml  README.md  biome.json  package.json  thoughts.md  tsconfig.json
.opencode/: opencode.json
.vim/: coc-settings.json
dotunnel/: Cargo.toml  README.md  build.rs
dotunnel-cli/: Cargo.toml  README.md  build.rs  package.json
dotunnel-cli/src/: command.rs  config.rs  main.rs  sys.rs
dotunnel-cli/src/command/: login.rs  logout.rs  setup.rs  status.rs  tunnel.rs
dotunnel-cli/src/sys/: dirs_unix.rs  dirs_win.rs
dotunnel-cloudflare/: .dev.vars  README.md  _routes.json  biome.json  components.json  package.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
dotunnel-cloudflare/functions/$lib/: env.d.ts
dotunnel-cloudflare/functions/$lib/relay/: RelayServiceObject.ts
dotunnel-cloudflare/src/: worker.tsx
dotunnel-cloudflare/src/app/: Document.tsx
dotunnel-cloudflare/src/app/api/: device.ts  tunnel.ts
dotunnel-cloudflare/src/app/auth/: device-flow.ts  handlers.ts  oauth.ts  session.ts  user.ts
dotunnel-cloudflare/src/app/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx
dotunnel-cloudflare/src/app/functions/: admin.ts  bootstrap.ts  device.ts  tunnels.ts
dotunnel-cloudflare/src/app/lib/: auth-endpoints.ts  db.ts
dotunnel-cloudflare/src/app/middlewares/: auth.ts  bootstrap-guard.ts  config-loader.ts  headers.ts  tunnel-proxy.ts
dotunnel-cloudflare/src/app/models/: config.ts  tunnel.ts
dotunnel-cloudflare/src/app/pages/: Bootstrap.tsx  DeviceAuth.tsx  Home.tsx
dotunnel-cloudflare/src/app/pages/admin/: Config.tsx  ConfigPage.tsx  Dashboard.tsx  Layout.tsx  Sessions.tsx  SessionsPage.tsx  Users.tsx  UsersPage.tsx
dotunnel-cloudflare/src/app/pages/bootstrap/: AdminUserStep.tsx  AuthProviderStep.tsx  CompleteStep.tsx  MigrationStep.tsx  StepIndicator.tsx  TunnelConfigStep.tsx
dotunnel-cloudflare/src/app/pages/service/: Dashboard.tsx  Layout.tsx  TunnelList.tsx
dotunnel-cloudflare/src/app/transport/: message.capnp  message.d.ts  message.js  message.ts  protocol.ts
dotunnel-cloudflare/src/durable-objects/: TunnelSession.ts
dotunnel-cloudflare/src/migrations/: 0001-initial.sql  0002-tunnels.sql  0003-session-type.sql
dotunnel-cloudflare/types/: rwsdk.d.ts
dotunnel/src/: lib.rs  transport.rs
dotunnel/src/transport/: message.capnp  message.rs
vite-plugin-dotunnel/: package.json
