[package]
name = "dotunnel-cli"
version = "0.0.1"
authors = ["Hyeseong Kim <hey@hyeseong.kim>"]
edition = "2021"
homepage = "https://github.com/cometkim/dotunnel/tree/main/dotunnel-cli"
repository = "https://github.com/cometkim/dotunnel"
license = "MIT"

[[bin]]
name = "dotunnel"
path = "src/main.rs"
bench = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
config = { version = "0.14", features = ["toml"] }
dirs-sys = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
