[package]
name = "dotunnel"
version = "0.0.1"
authors = ["Hyeseong Kim <hey@hyeseong.kim>"]
edition = "2024"
homepage = "https://github.com/cometkim/dotunnel/tree/main/dotunnel"
repository = "https://github.com/cometkim/dotunnel.git"
license = "MIT"

[dependencies]
bytes = "1"
bytesize = "2.1.0"
capnp = "0.21.7"
http = "1"
http-body-util = "0.1"
next-gen = "0.1.1"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1", features = ["rt", "net", "sync", "tracing"] }

[build-dependencies]
capnpc = "0.21.4"
